Revision history for Python extension KRISP

$Id$

1.0.2


1.0.1
	* Thu Apr 27 2011 JoungKyun.Kim <http://oops.org>
	- fixed overflow 32bit address on 64bit system
	- 1.0.1 release

	* Tue Apr 26 2011 JoungKyun.Kim <http://oops.org>
	- start 1.0.1 tree
	- fixed chardet.detect segfault on 64bit system

1.0.0
    * Mon Jul  5 2010 JoungKyun.Kim <http://oops.org>
    - 1.0.0 release
